--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
-@import '../public/mixin.scss';
-@import '../public/variable.scss';
+@import '../public/_mixin.scss';
+@import '../public/_variable.scss';
 
 .app {
   position: relative;
