--- a/src/components/ArticleBox/ArticleBox.scss
+++ b/src/components/ArticleBox/ArticleBox.scss
@@ -1,9 +1,9 @@
-@import "../../../public/mixin.scss";
-@import "../../../public/variable.scss";
+@import "../../../public/mixin";
+@import "../../../public/variable";
+@import "../../../public/handleThemes";
 
 .ab {
-    min-width: 300px;
-    background-color: $bgColor;
+    @include background_color("background-secondary");
     border-radius: $borderRadiusPlus;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     position: relative;
@@ -40,6 +40,7 @@
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 3fr 4fr 2fr;
         align-items: center;
+        @include font_color("font-primary");
     }
 
     &-tip {
@@ -48,7 +49,6 @@
         left: 30px;
         width: 120px;
         height: 30px;
-        background-color: red;
         z-index: -1;
         background: $bgLinearGradient;
         border-radius: $borderRadiusMini;
