--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,6 @@
-@import '../../../public/mixin.scss';
-@import '../../../public/variable.scss';
+@import '../../../public/mixin';
+@import '../../../public/variable';
+@import '../../../public/handleThemes';
 
 .header {
     height: 120px;
@@ -40,11 +41,53 @@
     }
 
     &-operate {
-        @include flex();
+        @include flex(space-between, center);
 
         span {
             display: block;
             margin: 0 0 0 15px;
+        }
+
+        &-toggle {
+            @include background_color("background-primary");
+            border-radius: $borderRadiusPlus;
+            width: 40px;
+            height: 20px;
+            position: relative;
+
+            .slide {
+                width: 30px;
+                height: 30px;
+                border-radius: $borderRadiusPlus;
+                position: absolute;
+                transition: all .2s;
+                top: -5px;
+                @include flex(center, center)
+            }
+
+            .bgLight {
+                background-color: $colorDark;
+                left: -5px;
+                opacity: 0.9;
+            }
+
+            .bgDark {
+                background-color: #6e40c9;
+                left: 15px;
+            }
+            
+            .sliderLight {
+                width: 25px;
+                height: 25px;
+                background: url('../../../src/assets/sun.svg') no-repeat;
+                background-size: 100% 100%;
+            }
+            .sliderDark {
+                width: 20px;
+                height: 20px;
+                background: url('../../../src/assets/moon.svg') no-repeat;
+                background-size: 100% 100%;
+            }
         }
     }
 }
