改变scss文件位置

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
-@import '../public/_mixin.scss';
-@import '../public/_variable.scss';
+@import './styles/mixin';
+@import './styles/variable';
 
 .app {
   position: relative;
