--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,6 @@
-@import '../../../public/mixin';
-@import '../../../public/variable';
-@import '../../../public/handleThemes';
+@import '../../styles/variable';
+@import '../../styles/mixin';
+@import '../../styles/handleThemes';
 
 .header {
     height: 120px;
