--- a/src/components/Title/Title.scss
+++ b/src/components/Title/Title.scss
@@ -1,7 +1,6 @@
-@import '../../../public/variable';
-@import '../../../public/mixin';
-@import '../../../public/handleThemes';
-
+@import '../../styles/variable';
+@import '../../styles/mixin';
+@import '../../styles/handleThemes';
 .title {
     height: 50px;
     line-height: 50px;
