--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,6 +1,6 @@
-@import '../../../public/variable';
-@import '../../../public/mixin';
-@import '../../../public/handleThemes';
+@import '../../styles/variable';
+@import '../../styles/mixin';
+@import '../../styles/handleThemes';
 
 .home {
     width: 100%;
