--- a/src/components/ArticleBox/ArticleBox.scss
+++ b/src/components/ArticleBox/ArticleBox.scss
@@ -4,6 +4,7 @@
 
 .ab {
     @include background_color("background-secondary");
+    @include font_color("font-primary");
     border-radius: $borderRadiusPlus;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     position: relative;
@@ -14,21 +15,16 @@
         border-top-right-radius: 30px;
         position: relative;
 
-        &-mask {
+        &-mask, img {
             width: 100%;
             height: 100%;
             border-top-left-radius: 30px;
             border-top-right-radius: 30px;
-            background: linear-gradient(transparent, #fff);
             position: absolute;
         }
 
-        img {
-            width: 100%;
-            height: 100%;
-            border-top-left-radius: 30px;
-            border-top-right-radius: 30px;
-            position: absolute;
+        &-mask {
+            background: linear-gradient(transparent, #fff);
         }
     }
 
@@ -40,7 +36,6 @@
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 3fr 4fr 2fr;
         align-items: center;
-        @include font_color("font-primary");
     }
 
     &-tip {
