--- a/src/styles/_handleThemes.scss
+++ b/src/styles/_handleThemes.scss
@@ -25,6 +25,13 @@
     }
 }
 
+//获取背景颜色rgba
+@mixin background_color_rgba($color) {
+    @include themeify {
+        background-color: themed($color)!important;
+    }
+}
+
 //获取字体颜色
 @mixin font_color($color) {
     @include themeify {
@@ -36,5 +43,12 @@
 @mixin border_color($color) {
     @include themeify {
         border-color: themed($color)!important;
+    }
+}
+
+//获取边框颜色
+@mixin avatar_border($color) {
+    @include themeify {
+        border: themed($color)!important;
     }
 }
