--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -4,15 +4,25 @@
 
 .home {
     width: 100%;
+
     &-banner {
-        @include grid(2, 2, 30px);
+        display: grid;
+        grid-gap: 32px;
+        grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+        grid-template-rows: repeat(auto-fit, minmax(300px, 1fr));
         margin-bottom: 64px;
+    }
+
+    @media screen and (max-width: 640px) {
+        &-banner {
+            grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+        }
     }
 
     &-articles {
         display: grid;
-        grid-template-columns: 1fr 320px;
-        gap: 30px;
+        grid-template-columns: 1fr 300px;
+        grid-gap: 32px;
         margin-top: 32px;
         @include font_color("font-secondary");
 
@@ -24,14 +34,18 @@
                 margin: 0 0 36px 0;
                 border-radius: $borderRadiusBig;
             }
-    
+
             &-list {
-                @include grid(3)
+                display: grid;
+                grid-gap: 32px;
+                grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+                grid-template-rows: repeat(auto-fit, minmax(300px, 1fr));
             }
         }
 
         &-right {
             height: 100px;
+
             &-IDCard {
                 height: 500px;
                 background: $bgLinearGradient;
@@ -46,7 +60,7 @@
                     border-radius: $borderRadiusPlus;
                     @include background_color_rgba("background-secondary-rgba");
                     position: absolute;
-                    display: grid; 
+                    display: grid;
                     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
                     justify-items: center;
                 }
@@ -56,6 +70,7 @@
                     width: 120px;
                     height: 120px;
                     margin-top: -50px;
+
                     img {
                         border-radius: 50%;
                         width: 120px;
@@ -69,6 +84,12 @@
                     font-weight: $fontWeightPlus;
                 }
             }
+        }
+    }
+
+    @media screen and (max-width: 1024px) {
+        &-articles {
+            grid-template-columns: 1fr;
         }
     }
 }
