--- a/src/components/ArticleBox/ArticleBox.scss
+++ b/src/components/ArticleBox/ArticleBox.scss
@@ -5,37 +5,50 @@
 .ab {
     @include background_color("background-secondary");
     @include font_color("font-primary");
-    border-radius: $borderRadiusPlus;
+    border-radius: $borderRadiusBig;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     position: relative;
+    display: grid;
+    grid-template-rows: repeat(3, minmax(0, 1fr));
+    transition: transform .4s ease-in-out;
 
     &-img {
-        height: 40%;
-        border-top-left-radius: 30px;
-        border-top-right-radius: 30px;
+        border-top-left-radius: 16px;
+        border-top-right-radius: 16px;
         position: relative;
+        grid-row: span 1/span 1;
 
-        &-mask, img {
+        img {
+            background-repeat: no-repeat;
+            background-size: cover;
+            -o-object-fit: cover;
+            object-fit: cover;
+            position: absolute;
+        }
+
+        &-mask,
+        img {
             width: 100%;
-            height: 100%;
-            border-top-left-radius: 30px;
-            border-top-right-radius: 30px;
+            height: 120%;
+            border-top-left-radius: 16px;
+            border-top-right-radius: 16px;
             position: absolute;
         }
 
         &-mask {
-            background: linear-gradient(transparent, #fff);
+            height: 121%;
+            @include linear_gradient("linear-gradient")
         }
     }
 
     &-content {
-        width: 100%;
-        height: 60%;
         padding: 0 24px 24px;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 3fr 4fr 2fr;
         align-items: center;
+        position: relative;
+        grid-row: span 2/span 2;
     }
 
     &-tip {
@@ -69,6 +82,6 @@
 
     .ab-tip {
         top: -23px;
-        transition: all .3s;
+        transition: all .4s;
     }
 }
