--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -13,6 +13,7 @@ $bgLinearGradient: linear-gradient(
   rgb(184, 185, 212) 60.07%,
   rgb(107, 26, 230) 20.05%
 );
+
 // body背景颜色
 $appBgColor: #f1f3f9;
 
@@ -25,6 +26,7 @@ $fontSizeMiddle: 16px;
 $fontWeightPlus: 900;
 $fontWeightBold: bold;
 
+// 字体
 $fontFamily: 华文细黑;
 
 // border
