--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -27,7 +27,7 @@
         @include font_color("font-secondary");
 
         &-left {
-            &-tab {
+            .tab {
                 width: 100%;
                 padding: 10px;
                 @include background_color("background-secondary");
@@ -35,7 +35,7 @@
                 border-radius: $borderRadiusBig;
             }
 
-            &-list {
+            .list {
                 display: grid;
                 grid-gap: 32px;
                 grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -46,7 +46,7 @@
         &-right {
             height: 100px;
 
-            &-IDCard {
+            .IDCard {
                 height: 500px;
                 background: $bgLinearGradient;
                 border-radius: $borderRadiusPlus;
@@ -54,7 +54,7 @@
                 position: relative;
                 margin: 0 auto;
 
-                &-mask {
+                .mask {
                     width: calc(100% - 10px);
                     height: calc(100% - 65px);
                     border-radius: $borderRadiusPlus;
@@ -63,26 +63,29 @@
                     display: grid;
                     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
                     justify-items: center;
-                }
 
-                &-avatar {
-                    border-radius: 50%;
-                    width: 120px;
-                    height: 120px;
-                    margin-top: -50px;
-
-                    img {
+                    .avatar {
                         border-radius: 50%;
                         width: 120px;
                         height: 120px;
-                        @include avatar_border("avatar-border");
+                        margin-top: -50px;
+    
+                        img {
+                            border-radius: 50%;
+                            width: 120px;
+                            height: 120px;
+                            @include avatar_border("avatar-border");
+                        }
                     }
+
+                    .name {
+                        width: 100px;
+                        font-weight: $fontWeightPlus;
+                    }
+
+                    .slogan{}
                 }
 
-                &-name {
-                    width: 100px;
-                    font-weight: $fontWeightPlus;
-                }
             }
         }
     }
