--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -21,6 +21,7 @@ $appBgColor: #f1f3f9;
 $fontSizePlus: 36px;
 $fontSizeBig: 24px;
 $fontSizeMiddle: 16px;
+$fontSizeSmall: 12px;
 
 // 字重
 $fontWeightPlus: 900;
