--- a/src/components/ArticleBox/ArticleBox.scss
+++ b/src/components/ArticleBox/ArticleBox.scss
@@ -45,10 +45,29 @@
         padding: 0 24px 24px;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 3fr 4fr 2fr;
+        grid-template-rows: 1fr 2fr 4fr 1fr;
         align-items: center;
         position: relative;
         grid-row: span 2/span 2;
+
+        &-tag {
+            font-size: $fontSizeSmall;
+            @include no-wrap();
+        }
+
+        &-title {
+            font-size: $fontSizeBig;
+            @include no-wrap();
+        }
+
+        &-content {
+            font-size: $fontSizeMiddle;
+        }
+
+        &-time {
+            font-size: $fontSizeSmall;
+            @include no-wrap();
+        }
     }
 
     &-tip {
